--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,6 @@
 # Distribution / packaging
-.Python
-env/
-venv/
-build/
-node_modules/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
 
-# Serverless directories
-.serverless
+module1/node_modules/
 
 .vscode/
 .idea/
-__pycache__/
-
-gotmon_frontend/node_modules/
-
-# Terraform files
-.terraform/
-*.tfstate
-*.tfstate.backup
-*.tfstate.lock.info
-# Ignored Terraform files
-*gitignore*.tf
-
-# SSH Keys
-*.pem
-
-# environment vars
-.env
-
-# Backup files
-*.bak
