replace with TypeScript

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 # Distribution / packaging
 
-module1/node_modules/
-module2/node_modules/
-module3/node_modules/
-module3/.env
+built/
+build/
+tmp/
+temp/
+node_modules/
+.env
 
 .vscode/
 .idea/
