update users module and prepare

--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "sqlite3": "^4.2.0",
     "typedi": "^0.8.0",
     "typeorm": "^0.2.25",
+    "typeorm-transactional-cls-hooked": "^0.1.12",
+    "typeorm-typedi-extensions": "^0.2.3",
     "uuid": "^7.0.3",
     "uuidv4": "^6.0.7"
   }
