--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hwnodejs",
   "version": "1.0.0",
-  "description": "read csv file and write it in txt with pipe stream",
+  "description": "simple testing apps by user and groups entities",
   "main": "app.js",
   "scripts": {
     "start": "npm run serve",
@@ -35,6 +35,7 @@
     "eslint": "^7.0.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-react": "^7.20.0",
+    "jest-cli": "^26.1.0",
     "nodemon": "^2.0.3",
     "ts-node": "3.3.0",
     "typescript": "3.3.3333"
