--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "debug": "npm run build && npm run watch-debug",
     "serve-debug": "nodemon --inspect build/app.js",
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
-    "typeorm": "ts-node -r typeormConfig.ts ./node_modules/.bin/typeorm",
     "migration:generate": "npm run typeorm -- migration:generate --config src/config/ormconfig.json --connection  --name ",
-    "migration:run": "npm run typeorm -- migration:run"
+    "migration:run": "npm run typeorm -- migration:run",
+    "typeorm": "ts-node -r ./typeormConfig.ts ./node_modules/.bin/typeorm",
+    "typeorm:sync": "yarn typeorm schema:sync",
+    "typeorm:drop": "yarn typeorm schema:drop",
+    "typeorm:reset": "yarn typeorm:drop && yarn typeorm:sync",
+    "typeorm:cli": "ts-node ./node_modules/typeorm/cli -f ./ormconfig.ts"
   },
   "repository": {
     "type": "git",
